--- a/public/css/mystyle.css
+++ b/public/css/mystyle.css
@@ -142,3 +142,21 @@ footer{
 .list-group-item{
     transition: background-color 0.6s;
 }
+
+.input{
+    background: #ecf0f1;
+    padding: 10px;
+    font-family: "Open Sans";
+    color: #7f8c8d;
+    border-style: solid;
+    border-width: 0;
+    border-bottom-width: 3px;
+    border-color: #bdc3c7;
+    outline: none;
+    border-radius: 5px 0px 5px 0px;
+    -webkit-transition: 0.1s ease-in-out;
+  }
+  .input:focus{
+    border-color: #41FF00;;
+    color: #34495e;
+  }
