--- a/views/partials/dashboardbody.ejs
+++ b/views/partials/dashboardbody.ejs
@@ -5,9 +5,14 @@
                 <div class="col-md-6">
                     <div class="card bg-dark text-light py-5 welcomeBox">
                         <div class="card-body ml-4" style="overflow: hidden;">
-                            <h5>Welcome, <span class="text-green">&lt;<%= username %> /&gt;</span></h5>
-                            <input type="text" placeholder="Enter website" id="site">
-                            <button class="btn btn-outline-light btn-sm" id="addsite"><i class="fas fa-plus"></i> <strong>Add a target</strong></button>
+                            <h2 class="mb-5">Welcome, <span class="text-green">&lt;<%= username %> /&gt;</span></h2>
+
+                            <h4> <u>Actions</u></h4>
+                            <input type="text" class="input" placeholder="Enter website" id="site">
+                            <button class="btn d-block mt-2 p-2 btn-outline-light btn-sm" id="addsite"><i class="fas fa-plus"></i> <strong>Add a target</strong></button>
+                            <hr class="bg-light">
+                            <input type="text" class="input" placeholder="Enter checklist name" id="checklist">
+                            <button class="btn d-block mt-2 p-2 btn-outline-light btn-sm" id="addChecklist"><i class="fas fa-plus"></i> <strong>Add checklist</strong></button>
                         </div>
                     </div>
                 </div>
@@ -32,6 +37,4 @@
     </div>
 </section>
 
-
-<script src="/js/pagination.js"></script>
 <script src="/js/dashboard.js"></script>
