Disabled unimplemented features

--- a/views/partials/dashboardbody.ejs
+++ b/views/partials/dashboardbody.ejs
@@ -12,7 +12,7 @@
                             <button class="btn d-block mt-2 p-2 btn-outline-light btn-sm" id="addsite"><i class="fas fa-plus"></i> <strong>Add a target</strong></button>
                             <hr class="bg-light">
                             <input type="text" class="input" placeholder="Enter checklist name" id="checklist">
-                            <button class="btn d-block mt-2 p-2 btn-outline-light btn-sm" id="addChecklist"><i class="fas fa-plus"></i> <strong>Add checklist</strong></button>
+                            <button class="btn d-block mt-2 p-2 btn-outline-light btn-sm disabled" disabled id="addChecklist"><i class="fas fa-plus"></i> <strong>Add checklist</strong></button>
                         </div>
                     </div>
                 </div>
