--- a/base/hackerTasks/views/partials/landingbody.ejs
+++ b/base/hackerTasks/views/partials/landingbody.ejs
@@ -74,5 +74,5 @@
     </div>
 </section>
 <div class="footer text-center" style="font-size:0.7rem;">
-    <strong>Designed and developed with <i class="fas fa-heart" style="color:red;"></i> by <span class="text-green">Suyogya</span></strong> 
+    <strong>Designed and developed with <i class="fas fa-heart" style="color:red;"></i> by <span class="text-green">serialfuzzer</span></strong> 
 </div>
